--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,107 +1,250 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
-    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
-    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+body {
+  background-color: rgba(69, 69, 148, 0.747);
+  margin: 0;
+  min-height: 100vh;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
+p {
   margin: 0;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+h1 {
+  margin: 0;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+h2 {
+  margin: 0;
 }
 
-a {
-  color: inherit;
+.sign-in {
+  height: fit-content;
+  margin: auto !important;
+  padding-top: 15rem;
+  width: fit-content;
+}
+
+.first-page {
+  height: fit-content;
+  margin: auto !important;
+  padding-top: 15rem;
+  width: fit-content;
+  color: white;
+}
+.first-page-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+}
+.first-page-container-btn {
+  border: none;
+  background-color: rgb(154, 154, 231);
+  color: white;
+  height: 2rem;
+  width: 8rem;
+  border-radius: 0.2rem;
+  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.534);
+  cursor: pointer;
+}
+.first-page-container-btn:hover {
+  background-color: rgb(129, 129, 230);
+}
+.first-page-container-btn:active {
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.336);
+  background-color: rgb(124, 124, 231);
+}
+
+.navbar {
+  height: 5rem;
+  width: 100%;
+  background-color: rgb(58, 58, 87);
+  color: rgb(255, 255, 255);
+  margin-bottom: 1rem;
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.692);
+}
+.navbar-container {
+  padding-block: 0.5rem;
+  padding-top: 1rem;
+  padding-inline: 2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.navbar-container-right {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+}
+
+#loginBtn {
+  border: none;
+  background-color: rgb(154, 154, 231);
+  color: white;
+  height: 2rem;
+  width: 4rem;
+  border-radius: 0.2rem;
+  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.534);
+  cursor: pointer;
+}
+#loginBtn:hover {
+  background-color: rgb(129, 129, 230);
+}
+#loginBtn:active {
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.336);
+  background-color: rgb(124, 124, 231);
+}
+
+.link {
+  color: white;
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+#navbarName {
+  font-size: 2.5rem;
+  cursor: pointer;
 }
+
+.landing-page {
+  display: grid;
+  grid-template-columns: minmax(min-content, 33%) minmax(min-content, 33%) minmax(min-content, 33%);
+  grid-template-rows: auto;
+  justify-items: center;
+  justify-content: center;
+  row-gap: 2rem;
+  margin-top: 2rem;
+}
+
+.event-text {
+  margin: 0;
+}
+
+#eventText {
+  max-height: 7.5rem;
+  min-height: 7.5rem;
+  overflow: hidden;
+}
+
+.event-page {
+  margin: 2rem;
+  display: flex;
+  justify-content: center;
+}
+.event-page-container {
+  display: flex;
+  flex-direction: column;
+  min-width: 30rem;
+  max-width: 60%;
+  border: 2px solid white;
+  color: white;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.356);
+  background-color: rgba(69, 69, 148, 0.507);
+}
+.event-page-container-top {
+  display: flex;
+  justify-content: space-between;
+}
+.event-page-container-top #eventPageImg {
+  max-height: 8rem;
+  border-radius: 0.5rem;
+  box-shadow: 2px 2px 6px black;
+}
+.event-page-container-top-left {
+  display: flex;
+  gap: 1rem;
+  margin: 0;
+}
+.event-page-container-top-right {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  margin: 0;
+}
+.event-page-container-center {
+  margin-block: 1rem;
+}
+.event-page-container-bottom {
+  display: flex;
+  justify-content: space-between;
+}
+
+.event-card {
+  width: 25rem;
+  border: 2px solid white;
+  color: white;
+  padding-inline: 0.2rem;
+  box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.315);
+  background-color: rgba(69, 69, 148, 0.507);
+  border-radius: 0.4rem;
+}
+.event-card-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-inline: 0.5rem;
+}
+.event-card-top-right {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+.event-card-center {
+  margin-block: 1rem;
+  margin-inline: 0.5rem;
+}
+.event-card-bottom {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-inline: 0.5rem;
+  margin-block: 1rem;
+}
+.event-card-bottom-right {
+  display: flex;
+  gap: 0.2rem;
+  align-items: flex-end;
+}
+
+.event-reserve-btn {
+  background-color: rgb(0, 225, 255);
+  width: 4rem;
+  height: 2rem;
+  font-size: 0.6rem;
+  border: none;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.712);
+  border-radius: 0.2rem;
+  cursor: pointer;
+}
+.event-reserve-btn:hover {
+  background-color: rgb(0, 189, 214);
+}
+.event-reserve-btn:active {
+  box-shadow: 1px 1px 2px;
+  background-color: rgba(0, 189, 214, 0.829);
+}
+
+.event-unreserve-btn {
+  background-color: rgb(255, 174, 0);
+  width: 4rem;
+  height: 2rem;
+  font-size: 0.6rem;
+  border: none;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.712);
+  border-radius: 0.2rem;
+  cursor: pointer;
+}
+.event-unreserve-btn:hover {
+  background-color: rgb(218, 149, 0);
+}
+.event-unreserve-btn:active {
+  box-shadow: 1px 1px 2px;
+  background-color: rgb(182, 124, 0);
+}
+
+#bookedStatus {
+  color: rgb(0, 255, 13);
+  margin: 0.4rem;
+}
+
+/*# sourceMappingURL=globals.css.map */
